<resources>
    <string name="app_name">Telegram</string>
    <string name="share_my_contact">Share my contact</string>
    <string name="clear_history">Clear history</string>
    <string name="unmute">Unmute</string>
    <string name="delete_chat">Delete chat</string>
    <string name="video_call">Video call</string>
    <string name="search">Search</string>
    <string name="call">Call</string>
    <string name="block_user">Block user</string>
    <string name="delete_contact">Delete contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="start_secret_chat">Start secret chat</string>
    <string name="add_to_home_screen">Add to Home screen</string>
    <string name="recent">Recent</string>
    <string name="info">Info</string>
    <string name="notification">Notification</string>
    <string name="off">Off</string>
    <string name="on">on</string>
    <string name="new_group">New Group</string>
    <string name="contacts">Contacts</string>
    <string name="calls">Calls</string>
    <string name="people_nearby">People Nearby</string>
    <string name="save_massages">Save Massages</string>
    <string name="setting">Setting</string>
    <string name="saghaei">Saghaei</string>
    <string name="_98933">+98933</string>
    <string name="name">name</string>
    <string name="last_seen_recently">last seen recently</string>
    <string name="detail">detail</string>
    <string name="date">date</string>
    <string name="unread">unread</string>
    <string name="new_channel">New Channel</string>
    <string name="sorted_by_last_seen_time">Sorted by last seen time</string>
    <string name="time">time</string>
    <string name="serach">Serach</string>
    <string name="invate_ferinds">Invate Ferinds</string>
    <string name="telegram_faq">Telegram FAQ</string>
    <string name="message">Message</string>
    <string name="new_message">New Message</string>
</resources>