<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="start"
    android:layoutDirection="ltr"
    android:layout_gravity="start">
    <item android:id="@+id/call" android:title="@string/call" android:icon="@drawable/ic_call"/>
    <item android:id="@+id/videocall" android:title="@string/video_call" android:icon="@drawable/ic_videocall"/>
    <item android:id="@+id/search" android:title="@string/search" android:icon="@drawable/ic_search"/>
    <item android:id="@+id/sharemycontact" android:title="@string/share_my_contact" android:icon="@drawable/ic_share" />
    <item android:id="@+id/clearhistory" android:title="@string/clear_history" android:icon="@drawable/ic_clearhistory"/>
    <item android:id="@+id/unmute" android:title="@string/unmute" android:icon="@drawable/ic_mute"/>
    <item android:id="@+id/deletechat" android:title="@string/delete_chat" android:icon="@drawable/ic_deletechat"/>

</menu>