<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="start"
    android:layoutDirection="ltr"
    android:layout_gravity="start">
    <item android:id="@+id/sharemycontact" android:title="@string/share_my_contact" android:icon="@drawable/ic_share" />
    <item android:id="@+id/blockuser" android:title="@string/block_user" android:icon="@drawable/ic_blockuser"/>
    <item android:id="@+id/editcontact" android:title="@string/edit_contact" android:icon="@drawable/ic_edit"/>
    <item android:id="@+id/deletecontact" android:title="@string/delete_contact" android:icon="@drawable/ic_deletechat"/>
    <item android:id="@+id/secretchat" android:title="@string/start_secret_chat" android:icon="@drawable/ic_lock"/>
    <item android:id="@+id/addhomescreen" android:title="@string/add_to_home_screen" android:icon="@drawable/ic_addscren"/>

</menu>