<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="horizontal">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_itemrecyc"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@color/colorPrimary"
        android:layout_alignParentStart="true"/>
    <RelativeLayout
        android:id="@+id/relativename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_itemrecyc">
        <TextView
            android:id="@+id/tv_name_recycitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/text_recycle_item"/>
        <TextView
            android:id="@+id/tv_detail_recycitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:layout_below="@id/tv_name_recycitem"
            style="@style/detail_recycle_item"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap">
        <TextView
            android:id="@+id/tv_date_recycitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            style="@style/detail_recycle_item"/>
        <TextView
            android:id="@+id/tv_unreadmsg_recycitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unread"
            android:layout_below="@id/tv_date_recycitem"
            style="@style/detail_recycle_item"/>

    </RelativeLayout>


</RelativeLayout>