<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorAccent">
            <include
                android:id="@+id/include_toolbar"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>
                <TextView
                    android:id="@+id/btn_addgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_group"
                    android:padding="10dp"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/ic_group"/>
                <TextView
                    android:id="@+id/btn_secretchat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_secret_chat"
                    android:padding="10dp"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/ic_lock"/>
                <TextView
                    android:id="@+id/btn_newchannel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_channel"
                    android:padding="10dp"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/ic_channel"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sorted_by_last_seen_time"
                    android:padding="5dp"
                    android:background="@color/cardview_shadow_start_color"
                    tools:ignore="PrivateResource" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_addchat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_user"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/colorPrimary"
            android:elevation="1dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"/>

</RelativeLayout>