<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimary"
            android:id="@+id/header">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_margin="10dp">
                    <TextView
                        android:id="@+id/tv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_back"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="10dp"
                        android:layout_centerVertical="true"/>
                    <TextView
                        android:id="@+id/tv_videocall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_video_call_white"
                        android:layout_toStartOf="@id/tv_call"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        tools:ignore="RelativeOverlap" />
                    <TextView
                        android:id="@+id/tv_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_call_white"
                        android:layout_toStartOf="@id/tv_moremenu_profile"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:id="@+id/tv_moremenu_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_more"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
                <include android:id="@+id/contact_layot"
                    layout="@layout/contact_layout"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="25dp"/>
            </RelativeLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layoutinfoo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:background="@color/colorAccent"
            >
            <TextView
                android:id="@+id/tvinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                style="@style/styletext"
                android:textColor="@color/colorPrimary"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvinfo"
                style="@style/text_recycle_item"
                android:layout_margin="10dp"
                android:lines="4"/>
            <RelativeLayout
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_info">
                <TextView
                    android:id="@+id/tv_notifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/notification"
                    style="@style/text_recycle_item"
                    tools:ignore="RelativeOverlap" />
                <TextView
                    android:id="@+id/tv_switch_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_notifi"
                    android:layout_marginStart="20dp"

                    android:text="@string/off"
                    style="@style/detail_recycle_item"/>
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/switch_notif"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"/>

            </RelativeLayout>
            <LinearLayout
                android:id="@+id/linear_tabsearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/notification">
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_sharemedia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabSelectedTextColor="@color/colorPrimary"
                    app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"/>
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager_sharemedia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_message"
        android:clickable="true"
        android:focusable="true"
        android:elevation="1dp"
        android:src="@drawable/ic_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>